Documenting the code

--- a/docs/mainpage.dox
+++ b/docs/mainpage.dox
@@ -64,13 +64,13 @@ The user can read the Examples page to see other applications of the library.
 
 ## The main classes
 
-The library implements two main classes @ref DAQFile and @ref DAQEvent, these two are the classes that must be used to read the file.
+The library implements two main classes DAQFile and DAQEvent, these two are the classes that must be used to read the file.
 
 ### DAQFile
 
-It is recomended at the beginning to create an istance of @ref DAQFile, using the default constructor or passing it the path to the file to be opened. Then it must be used the method
-@ref DAQFile::Initialise(), which will read the ```TIME``` header and the array of times. After that, the class is thought to be used as an input stream. Redirecting the @ref DAQFile into 
-a @ref DAQEvent instance, one single event is read: voltages and and integrated times are passed into the @ref DAQEvent instance. It is possible to do this operation untill the end of the
+It is recomended at the beginning to create an istance of DAQFile, using the default constructor or passing it the path to the file to be opened. Then it must be used the method
+@ref DAQFile::Initialise(), which will read the ```TIME``` header and the array of times. After that, the class is thought to be used as an input stream. Redirecting the DAQFile into 
+a DAQEvent instance, one single event is read: voltages and and integrated times are passed into the DAQEvent instance. It is possible to do this operation untill the end of the
 file is reached.
 
 ### DAQEvent
@@ -81,8 +81,36 @@ coming from DRS and WDB, read the page @ref binary for more informations.
 
 ## How it works
 
-Every time an instruction such like ```file >> event``` is executed, the file reads as many lines as possible from @ref DAQFile::in_, untill another ```EHDR``` tag is found.
-After that, using the *trigger cell* contained in the event header structure (see @ref EventHeader) and using the \f$ \Delta t\f$ arrays in @ref DAQFile::times_, the time intervals are
-integrated and passed to @ref DAQEvent::times_. After that the user can access all the statistical methods calling at first the method @ref DAQEvent::GetChannel().
+The first pass is to create two objects: a DAQFile and a DAQEvent's child class.
+
+@code{.cpp}
+DAQFile file;
+DRSEvent event;
+@endcode
+
+Now you can open a file giving the relative path, and initialise the file.
+
+@code{.cpp}
+file.Open("path/to/file.dat");
+file.Initialise();
+@endcode
+
+To read each event is possible to use a while loop. Inside the while loop the user can access any channel by using the method @ref DAQEvent::GetChannel(). After that
+it is possible to use any method to get the information wanted.
+
+@code{.cpp}
+while (file >> event)
+{
+    float charge = event.GetChannel(0, 0).GetCharge();
+    // ... 
+}
+@endcode
+
+## How the times are stored
+
+In the ```TIME``` header there are stored the time bin width, these are copied in the @ref DAQFile::times_ map. Once the instruction ```file >> event``` is executed,
+two nested ```while``` scan any board header and channel header, at every channel header found the corresponding delta-times vector is shifted accordingly to the trigger
+cell found in the event header and integrated, then it is copied in the @ref DAQEvent::times_ map. To understand more about the time alignemnt see @ref DAQEvent::TimeCalibration().
+
 
 */
