deploy: b7ba83d68ae65f9c4df78f2c745fd730f462eb59

--- a/_formulas_dark.tex
+++ b/_formulas_dark.tex
@@ -12,13 +12,18 @@
 
 \pagestyle{empty}
 \begin{document}
-$ \Delta t$
-\pagebreak
-
 $\sim 10^{-11}\textup{s}$
 \pagebreak
 
 $\sim 10^{-12}\textup{s}$
+\pagebreak
+
+\[
+   t_{ch}[i] = \sum_{j = 0}^{i - 1} dt_{ch}[(j + tCell)%1024]
+\]
+\pagebreak
+
+$ \Delta t$
 \pagebreak
 
 \end{document}
